# vertica-datasketch

./: BUILD.md  Dockerfile  LICENSE-2.0.txt  README.md  centos8.Dockerfile  start-build-env.sh
SOURCES/: CMakeLists.txt  install.sql  vertica-hll-druid.code-workspace
SOURCES/include/datasketches/: custom_alloc.hpp
SOURCES/include/datasketches/theta/: theta_common.hpp  theta_const.hpp  theta_def.hpp
SOURCES/src/datasketches/: custom_alloc.cpp
SOURCES/src/datasketches/theta/: ANotB.cpp  AggregateCreate.cpp  AggregateIntersection.cpp  AggregateUnion.cpp  GetEstimate.cpp  ScalarIntersection.cpp  ScalarUnion.cpp  theta_common.cpp
SOURCES/tests/datasketches/: theta_driver.cpp
